--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 </head>
 
 <body>
-    <svg>
-    </svg>
+    <button id="group1">Multiple Groups</button>
+    <button id="group2">One Center</button>
+    <div>
+        <svg>
+        </svg>
+    </div>
+    
 
     <!-- Load d3.js -->
     <script src="https://d3js.org/d3.v7.js"></script>
