Vaccination Status btn toggle

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <button id="group1">Multiple Groups</button>
-    <button id="group2">One Center</button>
+    <button id="group1">Group by Vacinnated Status</button>
+    <!-- <button id="group2">One Center</button> -->
     <div>
         <svg>
         </svg>
