Added div for legends

--- a/index.html
+++ b/index.html
@@ -12,11 +12,32 @@
 <body>
     <button id="group1">Group by Vacinnated Status</button>
     <!-- <button id="group2">One Center</button> -->
+    <!-- 
+        <div>Male</div>
+    </div> -->
+
+    <!-- <div id="wrapper">
+        <div id="first" style="width:25px;height:10px;border:1px solid steelblue; background-color: steelblue;"></div>
+        <div id="second">Male</div>
+    </div> -->
+
+    <div id="wrapper1">
+        <!-- <div id="div1">The two divs are</div> -->
+        <div id="div1" style="width:25px;height:10px;border:1px solid steelblue; background-color: steelblue;"></div>
+        <div id="div2">Male</div>
+    </div>
+
+    <div id="wrapper2">
+        <!-- <div id="div1">The two divs are</div> -->
+        <div id="div3" style="width:25px;height:10px;border:1px solid pink; background-color: pink;"></div>
+        <div id="div4">Female</div>
+    </div>
+
     <div>
         <svg>
         </svg>
     </div>
-    
+
 
     <!-- Load d3.js -->
     <script src="https://d3js.org/d3.v7.js"></script>
